infra/k8s/esb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esb
  template:
    metadata:
      labels:
        app: esb
    spec:
      containers:
        - name: esb
          image: esb
          imagePullPolicy: IfNotPresent
