infra/k8s/questions-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questions
  template:
    metadata:
      labels:
        app: questions
    spec:
      containers:
        - name: questions
          image: epitheoritis/questions
          imagePullPolicy: Never
