infra/k8s/answers-clusterip.yaml

apiVersion: v1
kind: Service
metadata:
  name: answer-clusterip-srv
spec:
  selector:
    app: answer
  ports:
    - name: answer
      protocol: TCP
      port: 4002
      targetPort: 4002
