infra/k8s/esb-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: esb-clusterip-srv
spec:
  selector:
    app: esb
  ports:
    - name: esb
      protocol: TCP
      port: 4004
      targetPort: 4004
