infra/k8s/q2a-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: q2a-clusterip-srv
spec:
  selector:
    app: q2a
  ports:
    - name: q2a
      protocol: TCP
      port: 4001
      targetPort: 4001
