infra/k8s/query-clusterip.yaml

apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4003
      targetPort: 4003
