infra/k8s/questions-clusterip.yaml

apiVersion: v1
kind: Service
metadata:
  name: questions-clusterip-srv
spec:
  selector:
    app: questions
  ports:
    - name: questions
      protocol: TCP
      port: 4001
      targetPort: 4001
