infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: askmeanything.com
      http:
        paths:
          - path: /login
            backend:
              serviceName: auth-clusterip-srv
              servicePort: 4000
          - path: /signup
            backend:
              serviceName: auth-clusterip-srv
              servicePort: 4000  
          - path: /create_question
            backend:
              serviceName: questions-clusterip-srv
              servicePort: 4001 
          - path: /edit_question
            backend:
              serviceName: questions-clusterip-srv
              servicePort: 4001
